NMS-19261: Fixed reviews